--- a/index.html
+++ b/index.html
@@ -8,47 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/leaflet/leaflet.css">
+    <link rel="stylesheet" href="styles.css">
     <style>
-        :root {
-            color-scheme: light;
-            --bg: #f2f5f8;
-            --surface: rgba(255, 255, 255, 0.92);
-            --surface-strong: #ffffff;
-            --ink: #101820;
-            --muted: #5e6a75;
-            --accent: #0f6ccf;
-            --accent-strong: #0a4e9a;
-            --line: #e2e8f0;
-            --shadow: 0 20px 40px rgba(16, 24, 32, 0.08);
-            --radius-lg: 22px;
-            --radius-md: 14px;
-            --radius-sm: 10px;
-        }
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body {
-            font-family: 'Space Grotesk', -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif;
-            background: radial-gradient(circle at 12% 15%, #eef5ff 0%, #f7f9fb 40%, #eef2f7 100%);
-            color: var(--ink);
-            line-height: 1.5;
-            min-height: 100vh;
-            position: relative;
-        }
-        body::before {
-            content: '';
-            position: fixed;
-            inset: 0;
-            background-image: radial-gradient(rgba(255, 255, 255, 0.7) 1px, transparent 1px);
-            background-size: 18px 18px;
-            opacity: 0.35;
-            pointer-events: none;
-        }
-        .container {
-            max-width: 1400px;
-            margin: 24px auto 48px;
-            padding: 0 20px;
-            position: relative;
-            z-index: 1;
-        }
         .header {
             background: linear-gradient(135deg, rgba(15, 108, 207, 0.95) 0%, rgba(9, 71, 150, 0.96) 100%);
             color: #f9fbff;
@@ -205,6 +166,15 @@
 </head>
 <body>
     <div class="container">
+                <nav class="top-nav">
+            <a href="index.html">Tokyo</a>
+            <a href="nagoya.html">Nagoya</a>
+            <a href="takayama.html">Takayama</a>
+            <a href="kyoto.html">Kyoto</a>
+            <a href="osaka.html">Osaka</a>
+            <a href="tamano-naoshima.html">Tamano / Naoshima</a>
+            <a href="hakone.html">Hakone</a>
+        </nav>
         <div class="header">
             <h1>Mapa Itinerario Tokyo - 8 dias</h1>
             <p>22 febrero - 1 marzo 2025 | Recorrido optimizado por zonas</p>
@@ -423,5 +393,16 @@
             map.setView([35.6762, 139.6503], 12);
         }
     </script>
+    <script>
+        const activePath = (location.pathname.split('/').pop() || 'index.html').toLowerCase();
+        document.querySelectorAll('.top-nav a').forEach((link) => {
+            const target = link.getAttribute('href').toLowerCase();
+            if (target === activePath) {
+                link.classList.add('is-active');
+            }
+        });
+    </script>
 </body>
 </html>
+
+
